--- a/index.css
+++ b/index.css
@@ -27,17 +27,11 @@ main {
   transition: margin-top 0.3s ease;
 }
 
-
-
-
-
-
 .box-container {
   display: flex;
-  justify-content: space-between;
+  justify-content:center;
   gap: 20px;
   flex-wrap: wrap;
-  /* Permette ai box di andare a capo su schermi piccoli */
   padding: 2em 0em;
 }
 
@@ -46,7 +40,6 @@ main {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  /* Permette ai box di andare a capo su schermi piccoli */
   padding: 0em 0em;
 }
 
@@ -57,7 +50,6 @@ main {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: calc(33.33% - 20px);
-  /* Tre box in fila */
   position: relative;
   text-align: center;
 }
@@ -74,7 +66,6 @@ main {
 .projects {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  /* 2 immagini per riga */
   gap: 10px;
   margin-top: 20px;
 }
@@ -90,10 +81,7 @@ main {
 
 .project img:hover {
   transform: scale(1.1);
-  /* Effetto zoom sulle immagini al passaggio del mouse */
 }
-
-
 
 .modal {
   display: none;
@@ -160,13 +148,9 @@ main {
   border: none;
 }
 
-/* Quando un pop-up è targettato, mostralo */
 .modal:target {
   display: block;
 }
-
-
-
 
 
 
@@ -174,12 +158,10 @@ main {
 @media (max-width: 768px) {
   .box {
     width: calc(50% - 10px);
-    /* Due box per riga su schermi piccoli */
   }
 
   .projects {
     grid-template-columns: repeat(1, 1fr);
-    /* Una sola colonna di immagini su schermi piccoli */
   }
 
   .modal-content p {
@@ -204,8 +186,6 @@ main {
     text-align: center;
   }
 }
-
-
 
 
 .intro {
@@ -237,7 +217,6 @@ main {
 
 .text-content {
   max-width: 50%;
-  /* Imposta la larghezza massima per il testo */
 }
 
 h1 {
@@ -250,33 +229,22 @@ h2 {
 }
 
 .text-content {
-
   margin-bottom: 1.5em;
 }
+
+
 
 .profile-pic {
   width: 50em;
   height: 35em;
-  background-image: url('assets/img/fotoprofilo.jpg');
+  background-image: linear-gradient(to right, #052f3d 0%, rgba(255, 255, 255, 0) 100%), url('assets/img/fotoprofilo.jpg');
   background-size: cover;
   background-position: center;
   opacity: 0.95;
-  /* Opacità per effetto traslucido */
   background-clip: content-box;
   position: relative;
   flex-shrink: 0;
   margin-right: -3em;
-}
-
-.profile-pic:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: linear-gradient(to left, rgba(5, 47, 61, 0) 0%, rgba(5, 47, 61, 1) 100%);
-
 }
 
 .nav {
@@ -312,6 +280,11 @@ h2 {
 }
 
 
+
+.social-iconsfooter {
+  display: none;
+}
+
 .clickable-container {
   display: flex;
   justify-content: center;
@@ -346,7 +319,6 @@ h2 {
   cursor: pointer;
   font-size: 1.5em;
 }
-
 
 
 footer {
@@ -391,8 +363,9 @@ footer {
   }
 
   .intro h2 {
+    display:flex ;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
     width: 12em;
   }
 
@@ -402,20 +375,6 @@ footer {
     width: 20em;
   }
 
-  .profile-pic {
-    max-width: 310px;
-    max-height: 200px;
-    background-image: url('assets/img/fotoprofilo.jpg');
-    /* Sostituisci con il percorso della tua immagine */
-    background-size: cover;
-    background-position: center;
-    opacity: 0.95;
-    /* Opacità per effetto traslucido */
-    background-clip: content-box;
-    position: absolute;
-    z-index: -1;
-  }
-
   .custom-font {
     font-size: smaller;
   }
@@ -423,6 +382,13 @@ footer {
   header {
     padding: 0%;
   }
+
+  footer {
+    text-align: center;
+    padding: 2em 0;
+    background-color: white;
+  }
+  
 }
 
 
@@ -509,89 +475,6 @@ footer {
 }
 
 
-
-
-
-/* Stile del modulo di contatto */
-.contact-form {
-  background-color: #fff;
-  padding: 2em;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  max-width: 600px;
-  margin: 2em auto;
-  text-align: center;
-}
-
-.contact-form h1 {
-  font-size: 2.5em;
-  color: #052f3d;
-  margin-bottom: 1em;
-}
-
-.contact-form h2 {
-  font-size: 1.5em;
-  color: #052f3d;
-  margin-bottom: 2em;
-}
-
-.contact-form .form-group {
-  margin-bottom: 1.5em;
-  text-align: left;
-}
-
-.contact-form label {
-  display: block;
-  font-size: 1em;
-  color: #052f3d;
-  margin-bottom: 0.5em;
-}
-
-.contact-form input,
-.contact-form textarea {
-  width: 100%;
-  padding: 0.8em;
-  margin-top: 0.5em;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #f9f9f9;
-  font-size: 1em;
-  color: #052f3d;
-}
-
-.contact-form input:focus,
-.contact-form textarea:focus {
-  outline: none;
-  border-color: #052f3d;
-  box-shadow: 0 0 5px rgba(5, 47, 61, 0.3);
-}
-
-.contact-form textarea {
-  resize: vertical;
-}
-
-.submit-btn {
-  background-color: #052f3d;
-  color: white;
-  padding: 0.8em 2em;
-  border: none;
-  border-radius: 5px;
-  font-size: 1.1em;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-.submit-btn:hover {
-  background-color: #02617d;
-}
-
-
-
-.nav-mobile {
-  display: none;
-}
-
 /* Mostra il menu a tendina (burger) quando il checkbox è selezionato */
 .menu-toggle:checked+.burger+.nav-mobile {
   display: flex;
@@ -606,6 +489,10 @@ footer {
   z-index: 10;
   border-bottom-left-radius: 15%;
   border-bottom-right-radius: 15%;
+}
+
+.nav-mobile {
+  display: none;
 }
 
 
@@ -644,9 +531,6 @@ footer {
 
 
 
-
-
-/* Responsività per schermi piccoli */
 @media (max-width: 768px) {
   .contact-form {
     padding: 1.5em;
@@ -704,6 +588,13 @@ footer {
   }
 
 
+  .social-iconsfooter {
+    display: flex;
+    justify-content: center;
+    gap: 1em;
+    color: #052f3d;
+  }
+
   .nav-mobile .nav2 {
     display: flex;
     flex-direction: column;
@@ -743,38 +634,28 @@ footer {
 
   }
 
-  /* Modifica la disposizione dei box (da 3 a 2 per i dispositivi mobili) */
   .box {
     width: calc(100% - 10px);
-    /* Due box per riga su schermi piccoli */
     padding: 1.5em;
 
   }
 
-  /* Adatta la disposizione delle immagini nei box */
   .projects {
     grid-template-columns: repeat(1, 1fr);
-    /* Una sola colonna per le immagini */
   }
 
-  /* Adatta la foto del profilo */
   .profile-pic {
-    width: 40em;
-    /* La larghezza occupa tutto lo spazio disponibile */
-    height: 30em;
-    /* Impostato a una altezza ragionevole */
+    width:20em;
+    height: 10em;
     background-size: cover;
     background-position: center;
-    opacity: 0.95;
-    margin-top: 2em;
     margin-right: 1em;
     margin-left: 1em;
-    border-radius: 50%;
+    border-radius: 10%;
     position: relative;
   }
 
 
-  /* Ridurre la dimensione del testo */
   h1 {
     font-size: 1.8em;
     margin-bottom: 0.5em;
@@ -785,8 +666,8 @@ footer {
     font-size: 1.3em;
   }
 
-  /* Aggiustamenti per la sezione intro */
   .intro {
+    display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
@@ -797,13 +678,16 @@ footer {
     width: auto;
   }
 
+  .intro h2 {
+    width: auto;
+  }
+
+
   .text-content {
     max-width: 90%;
-    /* Testo più largo sui dispositivi mobili */
     text-align: center;
   }
 
-  /* Box clickable (per i progetti) */
   .clickable-container {
     flex-direction: column;
     align-items: center;
@@ -813,37 +697,30 @@ footer {
   .clickable-section1 {
     max-width: 100%;
     width: 100%;
-    /* I box sono ora più larghi */
     padding: 10% 3%;
   }
 
-  /* Adatta le immagini della galleria dei progetti */
   .project img {
     width: 100%;
-    /* Le immagini riempiono il contenitore */
     height: auto;
     border-radius: 8px;
   }
 
-  /* Modifica la dimensione dei pulsanti "More" */
   .more-btn {
     font-size: 1em;
     padding: 0.8em 1.8em;
   }
 
-  /* Footer */
   footer {
     text-align: center;
     padding: 2em 1em;
   }
-
-  /* Modifica la larghezza delle immagini nei progetti per farle adattare ai dispositivi mobili */
+ù
   .modal-img {
     width: 100%;
     height: auto;
   }
 
-  /* Modulo di contatto */
   .contact-form {
     padding: 1.5em;
     width: 100%;
@@ -868,73 +745,55 @@ footer {
   }
 }
 
-/*cv*/
 
+/*cv*/
 .container {
   display: flex;
   flex-direction: column;
   max-width: 120em;
-  /* Imposta una larghezza massima per il contenuto */
   margin: 3em 3EM;
-  /* Centra il contenuto orizzontalmente */
   padding: 2em 3em;
-  /* Padding per dare spazio interno */
   background-color: #063f5271;
-  /* Colore di sfondo coerente con lo stile del sito */
   border-radius: 10px;
-  /* Aggiunge angoli arrotondati */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  /* Aggiunge ombra leggera */
 }
 
 .container h1,
 .container h2 {
   color: #ffffff;
-  /* Colore del testo in linea con il tema del sito */
   border-radius: 30px;
   text-align: center;
 }
 
 .container h6 {
   color: #ffffff99;
-  /* Colore del testo in linea con il tema del sito */
 }
 
 .container .col-md-8 p {
   color: #ffffffcc;
-  /* Colore del testo per i paragrafi */
   max-width: 20em;
   margin: 0 auto 1em auto;
 }
 
 .container ul {
   list-style: none;
-  /* Rimuove i pallini dalle liste */
   padding-left: 0;
-  /* Rimuove il padding a sinistra */
 }
 
 .container ul li {
   margin-bottom: 1em;
-  /* Distanza tra gli elementi della lista */
   font-size: 1.1em;
-  /* Font leggermente più grande per la leggibilità */
   color: #f9f9f9;
-  /* Colore del testo delle voci */
 }
 
 .container a {
   color: #e4ba86;
-  /* Colore del link */
   text-decoration: none;
-  /* Rimuove la sottolineatura */
 }
 
 .container a:hover {
   color: #ccc;
-  /* Colore del link al passaggio del mouse */
   text-decoration: underline;
-  /* Aggiunge sottolineatura al passaggio del mouse */
 }
 
 .container .row {
@@ -956,24 +815,16 @@ footer {
 
 .progress-container {
   width: 100%;
-  /* La larghezza della barra di progressione */
   height: 10px;
-  /* Altezza della barra */
   background-color: #e0e0e0;
-  /* Colore di sfondo della barra */
   border-radius: 15px;
-  /* Angoli arrotondati */
   overflow: hidden;
-  /* Evita che il contenuto esca dai bordi */
 }
 
 .progress-bar {
   height: 100%;
-  /* La barra di progresso avrà sempre l'altezza della container */
   background-color: #ce944e;
-  /* Colore della barra, verde in questo caso */
   transition: width 0.3s ease;
-  /* Aggiunge una transizione per un riempimento più fluido */
 }
 
 
@@ -981,17 +832,14 @@ footer {
 .container .col-md-8 {
   flex: 1;
   min-width: 280px;
-  /* Impedisce che le colonne si restringano troppo su schermi piccoli */
   margin-top: 2em;
 }
 
 .container .col-md-4 {
   background-color: #063f5271;
-  /* Fondo leggero per la colonna laterale */
   padding: 2em;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  /* Ombra leggera */
 }
 
 .container .col-md-8 {
@@ -1028,12 +876,10 @@ footer {
 @media (max-width: 768px) {
   .container {
     padding: 1.5em;
-    /* Riduce il padding per schermi più piccoli */
   }
 
   .container .row {
     flex-direction: column;
-    /* Allinea le colonne in verticale su schermi piccoli */
   }
 
   .container .col-md-4,
@@ -1052,7 +898,6 @@ footer {
   background-size: cover;
   background-position: center;
   opacity: 0.85;
-  /* Opacità per effetto traslucido */
   background-clip: padding-box;
   position: relative;
   display: flex;
