--- a/assets/index.css
+++ b/assets/index.css
@@ -8,14 +8,14 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #052f3d;
-  color: white;
+  color: #ffffff;
 }
 
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: white;
+  background-color: #ffffff;
   padding: 0.3em 3em;
 }
 
@@ -99,7 +99,7 @@ main {
   position: relative;
   margin: 5% auto;
   padding: 4em;
-  background-color: white;
+  background-color: #ffffff;
   border-radius: 10px;
   width: 80%;
   max-width: 600px;
@@ -160,7 +160,7 @@ main {
     position: relative;
     margin: 5% auto;
     padding: 2em;
-    background-color: white;
+    background-color: #ffffff;
     border-radius: 10px;
     width: 80%;
     max-width: 600px;
@@ -276,7 +276,6 @@ h2 {
 .clickable-section1,
 .clickable-section2,
 .clickable-section3 {
-  background-color: rgba(240, 244, 248, 0);
   color: #ffffff;
   padding: 2% 3% 10% 3%;
   text-align: center;
@@ -300,7 +299,7 @@ h2 {
 footer {
   text-align: center;
   padding: 2em 0;
-  background-color: white;
+  background-color: #ffffff;
 }
 
 @media (max-width: 768px) {
@@ -310,7 +309,7 @@ footer {
     position: absolute;
     top: 60px;
     right: 0;
-    background-color: white;
+    background-color: #ffffff;
     width: 100%;
     padding: 1em;
   }
@@ -351,7 +350,7 @@ footer {
   footer {
     text-align: center;
     padding: 2em 0;
-    background-color: white;
+    background-color: #ffffff;
   }
 }
 .menu-toggle,
@@ -368,7 +367,7 @@ footer {
 
 /* Stile generico del modulo */
 .contact-form {
-  background-color: #fff;
+  background-color: #ffffff;
   padding: 2em;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -419,7 +418,7 @@ footer {
 
 .submit-btn {
   background-color: #052f3d;
-  color: white;
+  color: #ffffff;
   padding: 0.8em 2em;
   border: none;
   border-radius: 5px;
@@ -436,7 +435,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: white;
+  background-color: #ffffff;
   padding: 1em;
   position: absolute;
   top: 60px;
@@ -541,7 +540,7 @@ footer {
     position: absolute;
     top: 2.5em;
     right: 0;
-    background-color: white;
+    background-color: #ffffff;
     width: 100%;
   }
   .burger {
@@ -557,7 +556,7 @@ footer {
     position: absolute;
     top: 2.5em;
     right: 0;
-    background-color: white;
+    background-color: #ffffff;
     width: 100%;
   }
   .box {
