--- a/assets/index.scss
+++ b/assets/index.scss
@@ -1,3 +1,8 @@
+$primary-color: #052f3d;
+$secondary-color: #063f5271;
+$hover-color: #e4ba86;
+$white: #ffffff;
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -6,15 +11,15 @@
 
 body {
     font-family: Arial, sans-serif;
-    background-color: #052f3d;
-    color: white;
+    background-color: $primary-color;
+    color: $white;
 }
 
 header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: white;
+    background-color: $white;
     padding: 0.3em 3em;
 }
 
@@ -46,7 +51,7 @@ main {
 /* Box singoli */
 
 .box {
-    background-color: #063f5271;
+    background-color: $secondary-color;
     padding: 2em;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -56,7 +61,7 @@ main {
 
     h3 {
         font-size: 1.5em;
-        color: #052f3d;
+        color: $primary-color;
         margin-bottom: 10px;
     }
 }
@@ -103,7 +108,7 @@ main {
     position: relative;
     margin: 5% auto;
     padding: 4em;
-    background-color: white;
+    background-color: $white;
     border-radius: 10px;
     width: 80%;
     max-width: 600px;
@@ -113,7 +118,7 @@ main {
         position: relative;
         margin: 15% auto;
         padding: 20px;
-        color: #052f3d;
+        color: $primary-color;
         border-radius: 10px;
         width: 80%;
         max-width: 600px;
@@ -144,7 +149,7 @@ main {
     top: 10px;
     right: 10px;
     font-size: 2em;
-    color: #052f3d;
+    color: $primary-color;
     cursor: pointer;
     background: none;
     border: none;
@@ -169,7 +174,7 @@ main {
             position: relative;
             margin: 15% auto;
             padding: 0px;
-            color: #052f3d;
+            color: $primary-color;
             border-radius: 10px;
             width: 100%;
             max-width: 700px;
@@ -179,7 +184,7 @@ main {
         position: relative;
         margin: 5% auto;
         padding: 2em;
-        background-color: white;
+        background-color: $white;
         border-radius: 10px;
         width: 80%;
         max-width: 600px;
@@ -232,7 +237,7 @@ h2 {
 .profile-pic {
     width: 50em;
     height: 35em;
-    background-image: linear-gradient(to right, #052f3d 0%, rgba(255, 255, 255, 0) 100%), url('../assets/img/fotoprofilo.jpg');
+    background-image: linear-gradient(to right, $primary-color 0%, rgba(255, 255, 255, 0) 100%), url('../assets/img/fotoprofilo.jpg');
     background-size: cover;
     background-position: center;
     opacity: 0.95;
@@ -249,13 +254,13 @@ h2 {
 
     a {
         text-decoration: none;
-        color: #052f3d;
+        color: $primary-color;
         display: flex;
         flex-direction: column;
         align-items: center;
 
         &:hover {
-            color: #e4ba86;
+            color: $hover-color;
             transition: color 0.3s;
         }
     }
@@ -264,11 +269,11 @@ h2 {
 .social-icons a {
     width: 2em;
     padding: 1em;
-    color: #052f3d;
+    color: $primary-color;
     transition: color 0.3s;
 
     &:hover {
-        color: #e4ba86;
+        color: $hover-color;
         transition: color 0.3s;
     }
 }
@@ -290,8 +295,7 @@ h2 {
 .clickable-section1,
 .clickable-section2,
 .clickable-section3 {
-    background-color: #f0f4f800;
-    color: #ffffff;
+    color: $white;
     padding: 2% 3% 10% 3%;
     text-align: center;
     transition: background-color 0.3s;
@@ -313,7 +317,7 @@ h2 {
 footer {
     text-align: center;
     padding: 2em 0;
-    background-color: white;
+    background-color: $white;
 }
 
 @media (max-width: 768px) {
@@ -323,19 +327,19 @@ footer {
         position: absolute;
         top: 60px;
         right: 0;
-        background-color: white;
+        background-color: $white;
         width: 100%;
         padding: 1em;
 
         a {
             text-decoration: none;
-            color: #052f3d;
+            color: $primary-color;
         }
     }
 
     .burger {
         display: block;
-        color: #052f3d;
+        color: $primary-color;
     }
 
     .boxes {
@@ -375,7 +379,7 @@ footer {
     footer {
         text-align: center;
         padding: 2em 0;
-        background-color: white;
+        background-color: $white;
     }
 }
 
@@ -394,7 +398,7 @@ footer {
 /* Stile generico del modulo */
 
 .contact-form {
-    background-color: #fff;
+    background-color: $white;
     padding: 2em;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -405,7 +409,7 @@ footer {
 
     h2 {
         font-size: 2em;
-        color: #052f3d;
+        color: $primary-color;
         margin-bottom: 1em;
     }
 
@@ -417,7 +421,7 @@ footer {
     label {
         display: block;
         font-size: 1em;
-        color: #052f3d;
+        color: $primary-color;
         margin-bottom: 0.5em;
     }
 
@@ -430,19 +434,19 @@ footer {
         border-radius: 5px;
         background-color: #f9f9f9;
         font-size: 1em;
-        color: #052f3d;
+        color: $primary-color;
     }
 
     input:focus {
         outline: none;
-        border-color: #052f3d;
+        border-color: $primary-color;
         box-shadow: 0 0 5px rgba(5, 47, 61, 0.3);
     }
 
     textarea {
         &:focus {
             outline: none;
-            border-color: #052f3d;
+            border-color: $primary-color;
             box-shadow: 0 0 5px rgba(5, 47, 61, 0.3);
         }
 
@@ -451,8 +455,8 @@ footer {
 }
 
 .submit-btn {
-    background-color: #052f3d;
-    color: white;
+    background-color: $primary-color;
+    color: $white;
     padding: 0.8em 2em;
     border: none;
     border-radius: 5px;
@@ -461,7 +465,7 @@ footer {
     transition: background-color 0.3s;
 
     &:hover {
-        background-color: #052f3d;
+        background-color: $primary-color;
     }
 }
 
@@ -471,7 +475,7 @@ footer {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: white;
+    background-color: $white;
     padding: 1em;
     position: absolute;
     top: 60px;
@@ -487,7 +491,7 @@ footer {
 
     .nav2 a {
         text-decoration: none;
-        color: #052f3d;
+        color: $primary-color;
         padding: 1em;
         font-size: 1.2em;
         text-align: center;
@@ -495,7 +499,7 @@ footer {
         border-bottom: 1px solid #ccc;
 
         &:hover {
-            color: #e4ba86;
+            color: $hover-color;
         }
     }
 }
@@ -509,11 +513,11 @@ footer {
     a {
         width: 2em;
         padding: 1em;
-        color: #052f3d;
+        color: $primary-color;
         font-size: 1.5em;
 
         &:hover {
-            color: #e4ba86;
+            color: $hover-color;
         }
     }
 }
@@ -548,7 +552,7 @@ footer {
     .burger {
         display: block;
         font-size: 2em;
-        color: #052f3d;
+        color: $primary-color;
         cursor: pointer;
     }
 
@@ -575,7 +579,7 @@ footer {
         display: flex;
         justify-content: center;
         gap: 1em;
-        color: #052f3d;
+        color: $primary-color;
     }
 
     .nav-mobile {
@@ -594,13 +598,13 @@ footer {
         position: absolute;
         top: 2.5em;
         right: 0;
-        background-color: white;
+        background-color: $white;
         width: 100%;
     }
 
     .burger {
         display: block;
-        color: #052f3d;
+        color: $primary-color;
     }
 
     .menu-toggle:checked+.burger+.nav2 {
@@ -612,7 +616,7 @@ footer {
         position: absolute;
         top: 2.5em;
         right: 0;
-        background-color: white;
+        background-color: $white;
         width: 100%;
     }
 
@@ -729,13 +733,13 @@ footer {
     max-width: 120em;
     margin: 3em 3EM;
     padding: 2em 3em;
-    background-color: #063f5271;
+    background-color: $secondary-color;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
     h1,
     h2 {
-        color: #ffffff;
+        color: $white;
         border-radius: 30px;
         text-align: center;
     }
@@ -762,7 +766,7 @@ footer {
     }
 
     a {
-        color: #e4ba86;
+        color: $hover-color;
         text-decoration: none;
 
         &:hover {
@@ -814,7 +818,7 @@ footer {
     }
 
     .col-md-4 {
-        background-color: #063f5271;
+        background-color: $secondary-color;
         padding: 2em;
         border-radius: 10px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -826,14 +830,14 @@ footer {
         h2 {
             background-color: #ccccccd3;
             margin-bottom: 1.5em;
-            color: #052f3d;
+            color: $primary-color;
         }
     }
 
     .col-md-4 h2 {
         background-color: #ccccccd3;
         margin-bottom: 1.5em;
-        color: #052f3d;
+        color: $primary-color;
     }
 
     .col-md-8 .mb-4 {
