--- a/assets/index.scss
+++ b/assets/index.scss
@@ -795,17 +795,60 @@ footer {
 }
 
 .progress-container {
-    width: 100%;
-    height: 10px;
-    background-color: #e0e0e0;
-    border-radius: 15px;
-    overflow: hidden;
+    width: 100%;         
+    height: 10px;        
+    background-color: #e0e0e0; 
+    border-radius: 15px;  
+    overflow: hidden;    
 }
 
 .progress-bar {
-    height: 100%;
+    height: 100%;         
     background-color: #ce944e;
-    transition: width 0.3s ease;
+    width: 80%;         
+    transition: width 0.3s ease; 
+}
+
+.progress-bar1 {
+    height: 100%;         
+    background-color: #ce944e;
+    width: 70%;         
+    transition: width 0.3s ease; 
+}
+
+.progress-bar2 {
+    height: 100%;         
+    background-color: #ce944e;
+    width: 85%;         
+    transition: width 0.3s ease; 
+}
+
+.progress-bar3 {
+    height: 100%;         
+    background-color: #ce944e;
+    width: 60%;         
+    transition: width 0.3s ease; 
+}
+
+.progress-bar4 {
+    height: 100%;         
+    background-color: #ce944e;
+    width: 60%;         
+    transition: width 0.3s ease; 
+}
+
+.progress-bar5 {
+    height: 100%;         
+    background-color: #ce944e;
+    width: 40%;         
+    transition: width 0.3s ease; 
+}
+
+.progress-bar6 {
+    height: 100%;         
+    background-color: #ce944e;
+    width: 70%;         
+    transition: width 0.3s ease; 
 }
 
 .container {
